# wendy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.circleci/: config.yml
.github/workflows/: notebook.yaml  service-notebook.yaml
gitlint/: gitlint_emoji.py
notebooks/: explore-data-courses.md
wendy/notebooks/: explore-data-courses.md  hello-world.md
